--- a/src/sass/setup/vars/_spacing.scss
+++ b/src/sass/setup/vars/_spacing.scss
@@ -1,9 +1,10 @@
 $sidePadding: 20px;
 
 $breakpointSm: 640px;
+$breakpointMd: 800px;
 $breakpointLg: 1024px;
 
-$breakpointNav: 840px;
+$breakpointNav: 940px;
 
 $maxContentWidth: 1440px;
 $maxNavWidth: 1600px;
