--- a/src/sass/template/_site-footer.scss
+++ b/src/sass/template/_site-footer.scss
@@ -1,56 +1,130 @@
 #site_footer{
     background-color: black;
     color: white;
-    padding: 4rem $sidePadding;
+    padding: 0 $sidePadding 4rem;
+    font-size: 1.5rem;
+
+    @media(min-width: $breakpointLg) {
+        padding-bottom: 0.5rem;
+    }
 }
 
 #footer_content_wrapper{
     width:100%;
-    max-width:$maxContentWidth;
+    max-width:$maxNavWidth;
     margin:0 auto;
     display:flex;
-    flex-direction:row;
+    flex-direction:column;
     align-items: center;
     justify-content: space-between;
 
-    @media(min-width: $breakpointSm){
-        
+    @media(min-width: $breakpointLg){
+        flex-direction: row;
     }
 }
 
 #footer_logo_container{
-    flex: 0 1 auto;
+    position: relative;
+    margin-bottom: -20px;
 
     img{
-        display:block;
+        display: block;
         max-width: 100%;
+        width: 100%;
+        position: relative;
+        top: -40px;
+    }
+
+    @media(min-width: $breakpointLg) {
+        order: 2;
+        flex: 0 1 320px;
+        margin-bottom: unset;
     }
 }
 
-#footer_nav_wrapper{
+#footer_links_container {
+    display: flex;
+    flex-direction: column;
 
-    @media(min-width: $breakpointSm){
+    @media(min-width: $breakpointLg) {
+        flex-direction: row;
+        order: 1;
+        flex: 1 1 40%;
+    }
+}
+
+#site_footer_nav_container {
+    flex: 1 1 auto;
+}
+
+#site_footer_nav {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+
+    .menu-item { 
+        margin: 0 0.38em;
+        text-align: center;
         flex: 1 1 auto;
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-weight: 900;
+            text-transform: uppercase;
+        }
     }
 }
 
 #footer_social_container{
     flex: 0 0 auto;
     display:flex;
-    justify-content: flex-end;
+    justify-content: center;
     font-size: 3rem;
-    padding-left: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 
     svg{
-        font-size: 24px;
+        font-size: 36px;
         margin-left:0.2em;
         margin-right:0.2em;
         color: $primaryAccentColor;
 
-        @media(min-width: $breakpointSm){
-            font-size: 40px;
-            margin-left:0.3em;
-            margin-right:0.3em;
+        @media(min-width: $breakpointLg){
+            font-size: 30px;
+            margin-left:0.13em;
+            margin-right:0.13em;
+            color: white;
+        }
+    }
+
+    @media(min-width: $breakpointLg) {
+        justify-content: flex-end;
+        padding-left: 1.3rem;
+        padding-right: 1.3rem;
+        margin-top: unset;
+        margin-bottom: unset;
+    }
+}
+
+#footer_text_container {
+    order: 3;
+    text-align: center;
+
+    @media(min-width: $breakpointLg) {
+        flex: 1 1 40%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        > div:not(:last-child) {
+            padding-right: 10px;
+            margin-right: 10px;
+            border-right: 1px solid white;
         }
     }
 }
