--- a/src/sass/template/template.scss
+++ b/src/sass/template/template.scss
@@ -1,5 +1,8 @@
+@import "main";
 @import "site-footer";
 @import "site-nav";
 @import "wpforms";
 @import "search-form";
 @import "template-pages";
+@import "entry-title";
+@import "entry-content";
