--- a/src/sass/template/_main.scss
+++ b/src/sass/template/_main.scss
@@ -7,7 +7,7 @@
     padding-bottom: 8rem;
 
     @media(min-width: $breakpointNav) {
-        padding-top: 3.5rem;
+        padding-top: 5rem;
     }
 
     > article {
@@ -18,8 +18,41 @@
         padding-left: $sidePadding;
         padding-right: $sidePadding;
     }
+
+    &.full_width {
+        padding-top: 0;
+        padding-bottom: 0;
+
+        > article {
+            max-width: unset;
+            padding-left: 0;
+            padding-right: 0;
+
+            .entry_header {
+                width: 100%;
+                max-width: $breakpointMd;
+                padding-left: $sidePadding;
+                padding-right: $sidePadding;
+                margin-left: auto;
+                margin-right: auto;
+                padding-top: 8rem;
+
+                @media(min-width: $breakpointNav) {
+                    padding-top: 5rem;
+                }
+            }
+        }
+    }
 }
 
 .dark_bg {
     color: white;
+
+    p > a {
+        color: $primaryAccentColor;
+
+        &:visited {
+            color: $primaryAccentColor;
+        }
+    }
 }
