--- a/src/sass/template/_foodservice.scss
+++ b/src/sass/template/_foodservice.scss
@@ -6,7 +6,7 @@
 
     > * {
         width: 100%;
-        max-width: $breakpointMd;
+        max-width: $breakpointSm;
         margin-left: auto;
         margin-right: auto;
     }
