--- a/src/sass/template/_products.scss
+++ b/src/sass/template/_products.scss
@@ -12,7 +12,7 @@ main.products {
         > .entry_header {
             background-image: url(../img/wood-bg-top.jpg);
             background-size: cover;
-            margin-bottom: -30px;
+            margin-bottom: 0;
 
             > .entry_title {
                 margin-top: 8rem;
@@ -35,9 +35,21 @@ main.products {
     > ul {
         list-style: none;
         margin: 0 auto;
-        padding: 0 20px 60px;
+        padding: 0 20px 100px;
         width: 100%;
         max-width: 25rem;
+
+        @media(min-width: $breakpointNav) {
+            display: flex;
+            flex-direction: row;
+            max-width: 100rem;
+            justify-content: center;
+
+            > li {
+                flex: 1 1 33%;
+                max-width: 25rem;
+            }
+        }
 
         > li {
             width: 100%;
@@ -71,16 +83,42 @@ main.products {
             margin: 0;
             padding: 0;
             position: relative;
-            background-size: cover;
-            background-position: bottom;
+            background-size: 100%;
+            background-repeat: repeat;
             box-shadow: 0 12px 96px black;
 
             .primary_content_container {
                 position: relative;
                 z-index: 2;
                 width: 100%;
-                padding: 4rem 0 200px;
+                padding: 60px 0 400px;
                 text-align: center;
+
+                @media(min-width: $breakpointLg){
+                    display: grid;
+                    max-width: $breakpointLg;
+                    margin-left: auto;
+                    margin-right: auto;
+                    grid-template-columns: 50% 50%;
+                    grid-template-rows: auto;
+                    grid-template-areas:
+                        "text slider"
+                        "buttons slider";
+
+                    .content_text {
+                        grid-area: text;
+                    }
+
+                    .package_images {
+                        grid-area: slider;
+                        position: relative;
+                        top: -90px;
+                    }
+
+                    .openers_container {
+                        grid-area: buttons;
+                    }
+                }
 
                 .content_text {
                     max-width: $breakpointSm;
@@ -88,6 +126,11 @@ main.products {
                     margin-right: auto;
                     padding-left: $sidePadding;
                     padding-right: $sidePadding;
+
+                    @media(min-width: $breakpointLg) {
+                        max-width: unset;
+                        align-self: end;
+                    }
 
                     > h2 {
                         font-size: 4rem;
@@ -101,6 +144,10 @@ main.products {
                         font-weight: 600;
                         margin-bottom: 2em;
 
+                        @media(min-width: $breakpointLg) {
+                            margin-bottom: unset;
+                        }
+
                         > p {
                             margin-bottom: 0.25em;
                         }
@@ -110,6 +157,10 @@ main.products {
                 .package_images {
                     margin-bottom: 8rem;
 
+                    @media(min-width: $breakpointLg) {
+                        margin-bottom: 0;
+                    }
+
                     > ul {
                         list-style: none;
                         margin: 0;
@@ -118,6 +169,13 @@ main.products {
                         li {
                             margin: 0;
                             padding: 0;
+
+                            img {
+                                display: block;
+                                max-width: 100%;
+                                margin-left: auto;
+                                margin-right: auto;
+                            }
                         }
                     }
 
@@ -186,61 +244,156 @@ main.products {
                             }
                         }
                     }
+                }
+            }
 
-                    .opener_target {
-                        z-index: 1;
-                        position: relative;
-                        top: -16px;
-                        padding: 7rem 4rem;
-                        color: black;
-                        box-shadow: 0 6px 20px rgba(0,0,0,0.5);
-                        display: none;
+            .background_images_container {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                z-index: 0;
+                overflow: hidden;
 
-                        &.active {
-                            display: block;
+                .bottom, .left, .right {
+                    position: absolute;
+                    height: auto;
+                }
+
+                .left, .right {
+                    top: 65%;
+                    transform: translateY(-50%);
+                    max-width: 30%;
+
+                    @media(min-width: $breakpointLg) {
+                        top: 50%;
+                        max-width: 20%;
+                    }
+
+                    @media(min-width: $breakpointLg + 400px) {
+                        max-width: 35%;
+                    }
+                }
+
+                .bottom {
+                    bottom: 0;
+                    max-width: 100%;
+                    left: 50%;
+                    transform: translateX(-50%);
+                }
+
+                .left {
+                    left: 0;
+                }
+
+                .right {
+                    right: 0;
+                }
+            }
+
+            .opener_target {
+                z-index: 2;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                width: 100%;
+                height: 100%;
+                left: -110%;
+                padding: 8rem 8rem;
+                color: black;
+                box-shadow: 0 6px 20px rgba(0,0,0,0.5);
+                transition: left 400ms;
+                overflow-y: auto;
+
+                @media(min-width: $breakpointLg) {
+                    width: 50%;
+
+                    &.heating_instructions {
+                        width: 100%;
+                    }
+                }
+
+                .opener_close_button {
+                    font-size: 0.825em;
+                    color: black;
+                    background-color: transparent;
+                    margin: 15px auto 0;
+                    display: block;
+                    padding: 10px;
+                    text-transform: uppercase;
+                    border: 2px solid black;
+                    font-weight: 600;
+                    max-width: unset !important;
+                    width: unset !important;
+                }
+
+                &.active {
+                    left: 0;
+                }
+
+                &.ingredients {
+                    text-align: left;
+
+                    > * {
+                        width: 100%;
+                        max-width: $breakpointSm;
+                        margin-left: auto;
+                        margin-right: auto;
+                    }
+                }
+
+                &.heating_instructions {
+                    text-align: center;
+
+                    img {
+                        display: inline-block;
+                        max-width: 100%;
+                        height: auto;
+                    }
+
+                    > header, > ul {
+                        width: 100%;
+                        max-width: $breakpointSm;
+                        margin-left: auto;
+                        margin-right: auto;
+                    }
+
+                    @media(min-width: $breakpointNav){
+
+                        > ul {
+                            max-width: $maxContentWidth;
+                        }
+                    }
+
+                    ul.heating_instructions_sections {
+                        list-style: none;
+                        margin-top: 0;
+                        margin-bottom: 0;
+                        padding: 0;
+
+                        @media(min-width: $breakpointNav) {
+                            display: flex;
+                            flex-direction: row;
+                            flex-wrap: nowrap;
                         }
 
-                        &.ingredients {
-                            text-align: left;
+                        > li {
+                            margin: 0;
+                            padding: 0;
 
-                            > * {
-                                width: 100%;
-                                max-width: $breakpointSm;
-                                margin-left: auto;
-                                margin-right: auto;
-                            }
-                        }
-
-                        &.heating_instructions {
-
-                            img {
-                                display: inline-block;
-                                max-width: 100%;
-                                height: auto;
-                            }
-
-                            > header, > ul {
-                                width: 100%;
-                                max-width: $breakpointSm;
-                                margin-left: auto;
-                                margin-right: auto;
-                            }
-
-                            ul.heating_instructions_sections {
-                                list-style: none;
-                                margin-top: 0;
-                                margin-bottom: 0;
-                                padding: 0;
-
-                                > li {
-                                    margin: 0;
-                                    padding: 0;
-                                }
+                            @media(min-width: $breakpointNav) {
+                                box-sizing: border-box;
+                                padding: 2rem;
+                                flex: 1 1 33%;
                             }
                         }
                     }
                 }
             }
+
         }
     }
 }
