--- a/src/sass/template/_template-pages.scss
+++ b/src/sass/template/_template-pages.scss
@@ -15,11 +15,18 @@
 
 .error404, .search-no-results {
     #primary {
-        background-color: $primaryAccentColor;
+        background-color: #f27721;
+    }
+}
+
+.search-results {
+    #primary {
+        background-color: white;
     }
 }
 
 .error404 .site_main, .search .site_main {
+    background-image: unset;
     padding-bottom: 4rem;
     min-height: calc(100vh - 28.4rem);
 
@@ -69,11 +76,14 @@
     max-width: 80rem;
 
     .result {
-        border: 1px solid black;
-        border-left: 3rem solid black;
+        border-bottom: 1px solid #e3e3e3;
         margin-left: 0;
         padding: 4rem $sidePadding;
         margin-bottom: 1.5rem;
+
+        &:last-child {
+            border-bottom: unset;
+        }
 
         .entry_header{
             margin: 0;
@@ -81,11 +91,11 @@
 
             .entry_title{
                 font-size: 1.5em;
-                border-bottom: none;
                 width: unset;
                 text-align: left;
                 padding: 0;
                 margin-top: 0;
+                border: none;
             }
         }
 
@@ -93,11 +103,19 @@
             font-size: 1.1em;
             font-weight: 400;
             line-height: 1.2;
+            text-align: center;
+            margin-top: 1rem;
         }
 
-        .read_more a {
-            color: white;
-            background-color: black;
+        .read_more {
+            text-align: center;
+            margin-top: 2rem;
+
+            a {
+                color: white;
+                background-color: black;
+                border-radius: 0;
+            }
         }
     }
 }
