--- a/src/sass/template/_main.scss
+++ b/src/sass/template/_main.scss
@@ -10,6 +10,14 @@
         padding-top: 5rem;
     }
 
+    h1,h2,h3,h4,h5,h6 {
+        line-height: 1;
+    }
+
+    p {
+        line-height: 1;
+    }
+
     > article {
         width: 100%;
         max-width: $breakpointMd;
