--- a/src/sass/template/_products.scss
+++ b/src/sass/template/_products.scss
@@ -115,6 +115,10 @@ main.products {
                     .content_text {
                         grid-area: text;
                         text-transform: uppercase;
+
+                        h2 {
+                            text-transform: unset;
+                        }
                     }
 
                     .package_images {
