--- a/src/sass/template/_products.scss
+++ b/src/sass/template/_products.scss
@@ -114,10 +114,9 @@ main.products {
 
                     .content_text {
                         grid-area: text;
-                        text-transform: uppercase;
 
-                        h2 {
-                            text-transform: unset;
+                        .content {
+                            text-transform: uppercase;
                         }
                     }
 
