remove overlay from foodservice bg, edit products list bg to tile vertically, set home slider height to 85vh instead of aspect-based

--- a/src/sass/template/_foodservice.scss
+++ b/src/sass/template/_foodservice.scss
@@ -1,8 +1,7 @@
 #foodservice_main {
     background-position: 50% 70%;
     background-size: cover;
-    background-color: #aaa;
-    background-blend-mode: multiply;
+    background-color: black;
     min-height: max(80vh, 50vw);
 
     > * {
