--- a/src/sass/template/_products.scss
+++ b/src/sass/template/_products.scss
@@ -77,7 +77,7 @@ main.products {
         width: 100%;
         margin: 0;
         padding: 0;
-        background-image: url(../img/wood-bg-top.jpg);
+        background-image: url(../img/wood-bg-mid.jpg);
         background-size: 100%;
         background-repeat: repeat-y;
 
@@ -576,9 +576,6 @@ main.products {
     margin-top: 8rem;
     text-align: center;
 
-    > h2 {
-    }
-
     ul {
         list-style: none;
         margin: 0;
@@ -617,10 +614,6 @@ main.products {
             margin-bottom: 2rem;
             font-weight: bold;
             line-height: 1;
-        }
-
-        .button_container {
-
         }
     }
 }
