--- a/src/sass/template/_site-footer.scss
+++ b/src/sass/template/_site-footer.scss
@@ -108,6 +108,7 @@
         padding-right: 1.3rem;
         margin-top: unset;
         margin-bottom: unset;
+        margin-right: 5rem;
     }
 }
 
