--- a/src/sass/template/_entry-title.scss
+++ b/src/sass/template/_entry-title.scss
@@ -14,4 +14,6 @@
     padding: 1.5rem 3.5rem;
     margin-top: 0;
     margin-bottom: 0;
+    box-shadow: 0 4px 8px black;
+    text-shadow: 0 4px 8px black;
 }
