--- a/src/sass/template/_products.scss
+++ b/src/sass/template/_products.scss
@@ -86,7 +86,7 @@ main.products {
             margin: 0;
             padding: 0;
             position: relative;
-            background-size: 100%;
+            background-size: cover;
             background-repeat: repeat;
             box-shadow: 0 12px 96px black;
 
