--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Crunch Roll Factory
 Text Domain: allebach-crunch-roll-factory
-Version: 0.1.3c
+Version: 0.1.4a
 Requires at least: 5.0
 Requires PHP: 8.0
 Description: Custom Wordpress theme.
